--- a/secret.html
+++ b/secret.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
-    <link href="http://fonts.cdnfonts.com/css/pacifico" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/pacifico" rel="stylesheet" />
 
     <title>Henry Taylor - Secret</title>
   </head>
