Henry added two new buttons

--- a/secret.html
+++ b/secret.html
@@ -23,7 +23,6 @@
     >
       find out more about "secreats."
     </button>
-
     <div id="secret" class="hidden">
       1 in order to prove it is true when evere your smart board is loading
       something it has a title and that title is in big writeing.
@@ -37,6 +36,29 @@
     </button>
     <div id="school" class="hidden">
       Visit us ( Henry,ackshith,felix) at west wimblden primary school!
+    </div>
+
+    <button
+      class="bg-red-500 text-black-800 p-4"
+      onclick="javascript:document.getElementById('questions').classList.toggle('hidden')"
+    >
+      questions?
+    </button>
+    <div id="questions" class="hidden">
+      pleas respond to henry taylor for any questions about things you would
+      like me to add onto <strong> the website. </strong>
+    </div>
+
+    <button
+      class="bg-red-500 text-black-800 p-4"
+      onclick="javascript:document.getElementById('forget').classList.toggle('hidden')"
+    >
+      don't forget
+    </button>
+    <div id="forget" class="hidden">
+      Dont forget to respond to <strong> Henry taylor </strong> and only henry
+      taylor the 9th get it............. ha ha ha ............. your
+      turn.........
     </div>
   </body>
 </html>
