Add metadata to homepage

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Henry Taylor's Website" />
+    <meta name="author" content="Henry Taylor" />
     <script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
     <link href="https://fonts.cdnfonts.com/css/pacifico" rel="stylesheet" />
 
-    <title>Henry Taylor</title>
+    <title>Henry Taylor's Website</title>
   </head>
 
   <body style="font-family: 'Pacifico', sans-serif" class="m-12">
